<resources>
    <string name="app_name">CovidCounter</string>
    <string name="cases">Coronavirus Cases:</string>
    <string name="deaths">Deaths:</string>
    <string name="recovered">Recovered:</string>
    <string name="disclaimer">Data collected from https://www.worldometers.info/coronavirus/ it all is just a fun weekend project, please dont sue me</string>
    <string name="refreshing">refreshing...</string>
    <string name="sToRefresh">s. to next automatic refresh...</string>
    <string name="selectCountry">Enter english country name: </string>
    <string name="viewButton">VIEW</string>

    <string name="errorInvalidCountry">Error! Invalid country name entered!</string>
    <string name="errorNoCountry">Error! No country name entered!</string>

    <string name="totCases">Total cases</string>
    <string name="newCases">New cases</string>
    <string name="totDeaths">Total deaths</string>
    <string name="newDeaths">New deaths</string>
    <string name="totRecovered">Total recovered</string>
    <string name="activeCases">Active cases</string>
    <string name="seriousCritical">Serious, critical</string>
    <string name="casesPerM">Tot. cases/1M pop.</string>

</resources>
